package org.vulcan.light.designpattern.structural.bridge.definition.object;

/**
 * @author Sam Lu
 * @date 2021/5/7
 */
public class RefinedAbstraction extends Abstraction {

    public void operate() {
        operation();
    }

}
