@startuml
class ConcreteImplementorA implements Implementor
class ConcreteImplementorB implements Implementor
Implementor : operationImpl()
ConcreteImplementorA : operationImpl()
ConcreteImplementorB : operationImpl()

class RefinedAbstraction implements Abstraction
Abstraction : operation()

Abstraction *-- Implementor

Client --> Abstraction

note right of Abstraction::operation()
impl.operationImpl();
end note
@enduml